[project]
name = "firefly-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Guang_Chen_",email = "guangchenworks@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "firefly"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
